--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -17,7 +17,7 @@
             <label>Password</label>
             <input type="password" name="password" class="form-control" required>
         </div>
-        <button class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary">Login</button>
     </form>
     <p class="mt-3">Don't have an account? <a href="{{ url_for('auth.register') }}">Register</a></p>
 </div>
