--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,9 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Scholarship System</a>
+    <a class="navbar-brand" href="{% if current_user.is_authenticated %}{{ url_for('student.dashboard') }}{% else %}{{ url_for('auth.login') }}{% endif %}">
+    Scholarship System
+</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
