admin done commitee half

--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -36,6 +36,15 @@
   <a href="{{ url_for('admin.manage_applications') }}" class="btn btn-dark">
     Manage Applications
   </a>
+
+  <a href="{{ url_for('admin.reports') }}" class="btn btn-info text-white">
+    Generate Reports
+  </a>
+
+  <a href="{{ url_for('admin.system_logs') }}" class="btn btn-warning">
+    System Logs
+  </a>
 </div>
 
 {% endblock %}
+
