--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -27,6 +27,7 @@
             <option value="student">Student</option>
             <option value="reviewer">Reviewer</option>
             <option value="committee">Committee</option>
+            <option value="admin">Admin</option>
         </select>
     </div>
     <div class="form-group mt-3">
