--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -8,6 +8,20 @@
 <body>
 <div class="container mt-5">
     <h2>Register</h2>
+    {% if error %}
+  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    {{ error }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+{% endif %}
+
+{% if success %}
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    {{ success }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+{% endif %}
+
     <form method="POST">
     <div class="form-group mt-3">
         <label for="username" class="form-label">Username</label>
