--- a/app/templates/admin/manage_applications.html
+++ b/app/templates/admin/manage_applications.html
@@ -9,19 +9,24 @@
     <thead class="table-dark">
       <tr>
         <th>ID</th>
-        <th>User ID</th>
-        <th>Scholarship ID</th>
+        <th>Student</th>
+        <th>Scholarship</th>
         <th>Status</th>
         <th>Update Status</th>
         <th>Reviewers</th>
+        <th>Action</th>
       </tr>
     </thead>
     <tbody>
       {% for a in applications %}
       <tr>
         <td>{{ a.id }}</td>
-        <td>{{ a.user_id }}</td>
-        <td>{{ a.scholarship_id }}</td>
+        <td>
+          {{ a.student.username if a.student else a.student_id }}
+        </td>
+        <td>
+          {{ a.scholarship.title if a.scholarship else a.scholarship_id }}
+        </td>
         <td>{{ a.status }}</td>
 
         <td>
@@ -40,10 +45,17 @@
             Assign
           </a>
         </td>
+
+        <td>
+          <a class="btn btn-sm btn-outline-dark"
+             href="{{ url_for('admin.application_detail', application_id=a.id) }}">
+            View
+          </a>
+        </td>
       </tr>
       {% else %}
       <tr>
-        <td colspan="6" class="text-center">No applications found.</td>
+        <td colspan="7" class="text-center">No applications found.</td>
       </tr>
       {% endfor %}
     </tbody>
